--- a/package.json
+++ b/package.json
@@ -7,9 +7,17 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsparticles/react": "^3.0.0",
+    "bootstrap": "^5.3.5",
+    "motion": "^12.10.0",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
+    "tsparticles": "^3.8.1",
+    "typewriter-effect": "^2.22.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
