--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-pdf": "^9.2.1",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
+    "swiper": "^11.2.7",
     "tsparticles": "^3.8.1",
     "typewriter-effect": "^2.22.0",
     "web-vitals": "^2.1.4"
